@@ -4,6 +4,8 @@
 	instead of w3m-current-coding-system.
 	(w3m-form-parse-and-fontify)[w3mmee]: Ditto.
 	(w3m-form-mee-select-value): Fixed select value.
+	(w3m-form-resume): Fixed checkbox resuming.
+	(w3m-form-parse-and-fontify): Use `form' instead of `(car forms)'.
 
 	* w3m-form.el (w3m-form-mee-select-value): New function.
 	(w3m-form-parse-and-fontify)[w3mmee]: Set select value.
